# SlangShaderCompiler

./: .gitignore  CMakeLists.txt  CMakeListsLight.txt  LICENSE  README.md
Dependencies/include/slang/: include dependencies.txt
Dependencies/lib/slang/: lib dependencies.txt
src/: ShaderCompiler.cpp  ShaderCompiler.h  main.cpp
